--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Grupo favorito</title>
 	<link href="https://fonts.googleapis.com/css?family=Basic|Luckiest+Guy|Poiret+One" rel="stylesheet">
-	<<link rel="stylesheet" href="main.css">
+	<link rel="stylesheet" href="main.css">
 	<link href="main.css">
 </head>
 <body>
